[package]
name = "playground-headobject"
version = "0.1.0"
authors = ["David MacEachern <david.maceachern.tech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_s3 = "0.45.0"
rusoto_core = "0.45.0"
tokio = "0.2"
futures = "0.3"
# tokio = {version = "0.2", features = ["full"]}
# rusoto_core = {version = "0.45", default_features=false, features=["rustls"]}
# rusoto_s3 = {version = "0.45", default_features=false, features=["rustls"]}
